<resources>
    <string name="app_name">YourPills</string>
    <string name="title_profile">Conta</string>
    <string name="title_calendario">Calendário</string>
    <string name="title_comprimidos">Comprimidos</string>
    <string name="title_receitas">Receitas</string>
    <string name="title_logout">Sair</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="apagar">Apagar</string>
</resources>